--- a/learning/index.html
+++ b/learning/index.html
@@ -10,7 +10,11 @@
     <style>
         #canvas {
             position: absolute;
-            border: 1px solid red;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background-color: #000;
         }
     </style>
 
@@ -19,8 +23,9 @@
 
 <body>
 
-    <script src="./app.js"></script>
-    <script src="./canvas.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <!-- <script src="./canvas.js"></script> -->
+    <script src="./part.js"></script>
 </body>
 
 </html>
