--- a/learning/index.html
+++ b/learning/index.html
@@ -23,9 +23,9 @@
 
 <body>
 
-    <!-- <script src="./app.js"></script> -->
+    <script src="./app.js"></script>
     <!-- <script src="./canvas.js"></script> -->
-    <script src="./part.js"></script>
+    <!-- <script src="./part.js"></script> -->
 </body>
 
 </html>
