--- a/leather/index.html
+++ b/leather/index.html
@@ -477,6 +477,116 @@
                             </p>
                         </div>
                     </div>
+                    <div class="row my-5 bag-icon-div">
+                        <div class="col-12 col-sm-12 col-md-4 p-5 border-left">
+                            <div class="d-flex align-items-center">
+                                <img src="./assets/images/image 7.png" alt="" />
+                                <h3 class="mb-0 ms-3">Free Delivery</h3>
+                            </div>
+                            <p class="mt-2">For all oders over $100, consectetur adipim scing elit.</p>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-4 p-5 border-left">
+                            <div class="d-flex align-items-center">
+                                <img src="./assets/images/image 8.png" alt="" />
+                                <h3 class="mb-0 ms-3">90 Days Return</h3>
+                            </div>
+                            <p class="mt-2">If goods have problems, consectetur adipim scing elit.</p>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-4 p-5">
+                            <div class="d-flex align-items-center">
+                                <img src="./assets/images/image 9.png" alt="" />
+                                <h3 class="mb-0 ms-3">Secure Payment</h3>
+                            </div>
+                            <p class="mt-2">100% secure payment, consectetur adipim scing elit.</p>
+                        </div>
+                    </div>
+
+                    <div class="row justify-content-center">
+                        <div class="col-10 text-center">
+                            <h2>Follow us on Instagram</h2>
+                            <span>@LeatherRignt</span>
+                        </div>
+                    </div>
+
+                    <div class="row my-5 gx-0">
+                        <div class="col-12 col-sm-12 col-md-3">
+                            <div class="hover_image_div">
+                                <div class="hover-icon">
+                                    <img src="./assets/images/instagram.png" alt="" />
+                                </div>
+                                <img src="./assets/images/Rectangle 66.png" class="img-fluid w-100" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-3">
+                            <div class="hover_image_div">
+                                <div class="hover-icon">
+                                    <img src="./assets/images/instagram.png" alt="" />
+                                </div>
+                                <img src="./assets/images/Rectangle 67.png" class="img-fluid w-100" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-3">
+                            <div class="hover_image_div">
+                                <div class="hover-icon">
+                                    <img src="./assets/images/instagram.png" alt="" />
+                                </div>
+                                <img src="./assets/images/Group 1000001989.png" class="img-fluid w-100" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-3">
+                            <div class="hover_image_div">
+                                <div class="hover-icon">
+                                    <img src="./assets/images/instagram.png" alt="" />
+                                </div>
+                                <img src="./assets/images/Rectangle 69.png" class="img-fluid w-100" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-3">
+                            <div class="hover_image_div">
+                                <div class="hover-icon">
+                                    <img src="./assets/images/instagram.png" alt="" />
+                                </div>
+                                <img src="./assets/images/Rectangle 62.png" class="img-fluid w-100" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-3">
+                            <div class="hover_image_div">
+                                <div class="hover-icon">
+                                    <img src="./assets/images/instagram.png" alt="" />
+                                </div>
+                                <img src="./assets/images/Rectangle 63.png" class="img-fluid w-100" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-3">
+                            <div class="hover_image_div">
+                                <div class="hover-icon">
+                                    <img src="./assets/images/instagram.png" alt="" />
+                                </div>
+                                <img src="./assets/images/Rectangle 64.png" class="img-fluid w-100" alt="" />
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-3">
+                            <div class="hover_image_div">
+                                <div class="hover-icon">
+                                    <img src="./assets/images/instagram.png" alt="" />
+                                </div>
+                                <img src="./assets/images/Rectangle 65.png" class="img-fluid w-100" alt="" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row justify-content-center py-4">
+                        <div class="col-10 text-center">
+                            <h2>WHY LEATHER RIGHT</h2>
+                            <p class="mt-3">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+                                standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+                                type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining
+                                essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                                passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- WHY LEATHER RIGHT -->
@@ -484,7 +594,57 @@
         <!-- main -->
 
         <!-- footer -->
-        <footer></footer>
+        <footer class="pt-5">
+            <div class="contaienr-fluid side_padding">
+                <div class="row my-5">
+                    <div class="col-12 col-sm-12 col-md-4">
+                        <img src="./assets/images/LEATHERRIGHT.png" class="img-fluid" alt="" />
+                        <p class="mt-3 mb-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+
+                        <p class="mb-1">Call Us : +1-888-789-4535</p>
+                        <p>info@LEATHERRIGHT.com</p>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-2">
+                        <h5>FAQS</h5>
+                        <p class="mt-3">Information</p>
+                        <p>Payment</p>
+                        <p>Shipping</p>
+                        <p>Security policy</p>
+                        <p>Contact us</p>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-2">
+                        <h5>INFORMATION</h5>
+                        <p class="mt-3">Bookmark</p>
+                        <p>Features</p>
+                        <p>Sitemap</p>
+                        <p>Lists</p>
+                        <p>Map & Contact</p>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4">
+                        <h5>NEWSLETTER</h5>
+                        <p class="mt-3">Be the first to get the latest news about trends, promotions and much more!</p>
+
+                        <div class="sub_div mb-4">
+                            <input type="text" placeholder="Enter your email" />
+                            <button class="subscribe_button">Subscribe</button>
+                        </div>
+
+                        <img src="./assets/svg/Group 1000001989.svg" alt="" />
+                        <img src="./assets/svg/Group 9.svg" alt="" class="ms-2" />
+                        <img src="./assets/svg/Group 10.svg" alt="" class="ms-2" />
+                        <img src="./assets/svg/Group 11.svg" alt="" class="ms-2" />
+                    </div>
+                </div>
+                <div class="row mt-5 second_footer py-3">
+                    <div class="col-12 col-sm-12 col-md-6">
+                        <p>Leatherright ©2017 - All Rights Reserved</p>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 text-end">
+                        <p>Privacy Policy</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
         <!-- footer -->
 
         <!-- script -->
