--- a/leather/index.html
+++ b/leather/index.html
@@ -73,10 +73,13 @@
                                 <a class="nav-link" href="#">Woman <i class="fas fa-angle-down"></i></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">halloween <i class="fas fa-angle-down"></i></a>
+                                <a class="nav-link" href="#">kids <i class="fas fa-angle-down"></i></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">lookbook</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Offers</a>
                             </li>
 
                             <li class="nav-item">
@@ -124,7 +127,7 @@
     <main>
         <!-- banner slider section -->
         <div class="one-time">
-            <section class="banner_slider_section mb-0 mb-md-5">
+            <section class="banner_slider_section first_banner mb-0 mb-md-5">
                 <div class="slider_dots">
                     <!-- <div class="dot">
                             <div class="dot-inner"></div>
@@ -156,7 +159,7 @@
                     </div>
                 </div>
             </section>
-            <section class="banner_slider_section mb-0 mb-md-5">
+            <section class="banner_slider_section second_banner mb-0 mb-md-5">
                 <div class="slider_dots">
                     <!-- <div class="dot">
                             <div class="dot-inner"></div>
@@ -170,10 +173,40 @@
                     <div class="container-fluid side_padding">
                         <div class="row">
                             <div class="col-12 col-sm-12 col-sm-6">
-                                <h5>WOMEN</h5>
+                                <h5>MEN</h5>
                                 <h1>
-                                    Denim Elastic <br />
-                                    Waist Dress
+                                    Leather for <br /> every purpose
+                                </h1>
+
+                                <p>
+                                    Casual line. Short design. 100% suede leather. <br />
+                                    Backstitched elbow patche
+                                </p>
+
+                                <button class="shop_now mt-4">Shop Now</button>
+                            </div>
+                            <div class="col-12 col-sm-12 col-sm-6"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="banner_slider_section three_banner mb-0 mb-md-5">
+                <div class="slider_dots">
+                    <!-- <div class="dot">
+                            <div class="dot-inner"></div>
+                        </div>
+                        <div class="dot active-dot">
+                            <div class="dot-inner"></div>
+                        </div>
+                        <div class="dot">
+                            <div class="dot-inner"></div>
+                        </div> -->
+                    <div class="container-fluid side_padding">
+                        <div class="row">
+                            <div class="col-12 col-sm-12 col-sm-6">
+                                <h5>KID</h5>
+                                <h1>
+                                    Kids Specialist <br /> at Clothing.
                                 </h1>
 
                                 <p>
@@ -725,7 +758,8 @@
             speed: 300,
             slidesToShow: 1,
             adaptiveHeight: true,
-            autoplaySpeed: 2000,
+            autoplay: true,
+            autoplaySpeed: 5000,
         });
     </script>
 
