--- a/busNet/services.html
+++ b/busNet/services.html
@@ -34,13 +34,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                               <li class="nav-item">
-                                   <a class="nav-link" aria-current="page" href="#">Home</a>
+                                   <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                               </li>
                               <li class="nav-item">
-                                   <a class="nav-link" href="#">Abouts Us </a>
+                                   <a class="nav-link" href="./about.html">Abouts Us </a>
                               </li>
                               <li class="nav-item">
-                                   <a class="nav-link" href="#">Services</a>
+                                   <a class="nav-link" href="./services.html">Services</a>
                               </li>
                               <li class="nav-item">
                                    <a class="nav-link" href="#">portfolio</a>
@@ -59,10 +59,20 @@
                </div>
           </nav>
 
-          <div class="about_banner server_banner text-center">
-               <div class="banner-content">
-                    <h5>EXPLORE, CREATE, INSPIRE</h5>
-                    <h4><span>Services</h4>
+
+          <div class="col-12 side_padding">
+               <div class="about_banner server_banner banner-section ">
+                    <div class="">
+                         <!-- <h4>Your Trusted Friend for</h4> -->
+                         <h2>Services</h2>
+                         <p class="my-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                              Lorem <br /> Ipsum has
+
+                              been the industry's standard dummy text ever since.
+                         </p>
+
+                         <button class="read-more">READ MORE</button>
+                    </div>
                </div>
           </div>
      </header>
@@ -71,8 +81,139 @@
      <!-- main -->
      <main>
 
+
+          <!-- Service We Provide -->
+          <section class="service_section why_choose_us about-up py-5">
+               <div class="phone-one">
+                    <img src="./public/images/asasasa.png" alt="">
+               </div>
+               <div class="container-fluid side_padding">
+                    <div class="row">
+                         <div class="row">
+                              <div class="col-12 text-center">
+                                   <h3><span>Service</span> We Provide</h3>
+                                   <div class="line_div sm-line-two"></div>
+                                   <!-- <h2 class="mt-4">
+                                        To bring inspiration and innovation to every <br />
+                                        <span>business in the world.</span>
+                                   </h2> -->
+                              </div>
+                         </div>
+
+                         <div class="row py-5">
+                              <div class="col-12 col-sm-12 col-md-3">
+                                   <div class="server_cards text-center py-5 px-4">
+                                        <img src="./public/images/setting-icon.png" alt="">
+                                        <h5 class="mt-4">Web development</h5>
+                                        <div class="ln"></div>
+
+                                        <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                             industry.
+                                             since the 1500s, </p>
+
+                                        <button class="read_more mt-3">READ MORE</button>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-3">
+                                   <div class="server_cards text-center py-5 px-4">
+                                        <img src="./public/images/Group 1000002059.png" alt="">
+                                        <h5 class="mt-4">web designing</h5>
+                                        <div class="ln"></div>
+
+                                        <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                             industry.
+                                             since the 1500s, </p>
+
+                                        <button class="read_more mt-3">READ MORE</button>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-3">
+                                   <div class="server_cards text-center py-5 px-4">
+                                        <img src="./public/images/Group 1000002060.png" alt="">
+                                        <h5 class="mt-4">mobile application development</h5>
+                                        <div class="ln"></div>
+
+                                        <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                             industry.
+                                             since the 1500s, </p>
+
+                                        <button class="read_more mt-3">READ MORE</button>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-3">
+                                   <div class="server_cards text-center py-5 px-4">
+                                        <img src="./public/images/Group 1000002061.png" alt="">
+                                        <h5 class="mt-4">SEO</h5>
+                                        <div class="ln"></div>
+
+                                        <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                             industry.
+                                             since the 1500s, </p>
+
+                                        <button class="read_more mt-3">READ MORE</button>
+                                   </div>
+                              </div>
+
+                              <div class="col-12 col-sm-12 col-md-3 mt-4">
+                                   <div class="server_cards text-center py-5 px-4">
+                                        <img src="./public/images/Group 1000002062.png" alt="">
+                                        <h5 class="mt-4">cloud management</h5>
+                                        <div class="ln"></div>
+
+                                        <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                             industry.
+                                             since the 1500s, </p>
+
+                                        <button class="read_more mt-3">READ MORE</button>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-3 mt-4">
+                                   <div class="server_cards text-center py-5 px-4">
+                                        <img src="./public/images/Group 1000002063.png" alt="">
+                                        <h5 class="mt-4">cloud migration</h5>
+                                        <div class="ln"></div>
+
+                                        <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                             industry.
+                                             since the 1500s, </p>
+
+                                        <button class="read_more mt-3">READ MORE</button>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-3 mt-4">
+                                   <div class="server_cards text-center py-5 px-4">
+                                        <img src="./public/images/Group 1000002064.png" alt="">
+                                        <h5 class="mt-4">Website maintenance/ open to challenges</h5>
+                                        <div class="ln"></div>
+
+                                        <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                             industry.
+                                             since the 1500s, </p>
+
+                                        <button class="read_more mt-3">READ MORE</button>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-3 mt-4">
+                                   <div class="server_cards text-center py-5 px-4">
+                                        <img src="./public/images/Group 1000002064 (1).png" alt="">
+                                        <h5 class="mt-4">quality assurance (qA)</h5>
+                                        <div class="ln"></div>
+
+                                        <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting
+                                             industry.
+                                             since the 1500s, </p>
+
+                                        <button class="read_more mt-3">READ MORE</button>
+                                   </div>
+                              </div>
+                         </div>
+                    </div>
+               </div>
+          </section>
+          <!-- Service We Provide -->
+
           <!-- Our Software -->
-          <section class="our_software server why_choose_us about-up py-5 my-5">
+          <!-- <section class="our_software server why_choose_us about-up py-5 my-5">
                <div class="phone-one">
                     <img src="./public/images/asasasa.png" alt="">
                </div>
@@ -151,29 +292,83 @@
                          </div>
                     </div>
                </div>
-          </section>
+          </section> -->
           <!-- Our Software -->
 
 
           <!-- Technology Stack -->
-          <section class="technology_stack tec about-up py-5">
-               <div class="container-fluid side_padding">
-                    <div class="row">
-                         <div class="col-12 col-sm-12 col-md-4">
-                              <h3><span>Technology</span> Stack</h3>
-                              <div class="line_div sm-line"></div>
+          <section class="tec about-up py-2">
+               <div class="phone-tow">
+                    <img src="./public/images/asasasasasaaaaaaaaaaaaaaaaaaaaaa.png" alt="">
+               </div>
+               <div class="container-fluid side_padding ">
+                    <div class="row technology_stack p-5">
+                         <div class="col-12 text-center">
+                              <h3>Technology <span>Stack</span> </h3>
+                              <div class="line_div sm-line-two"></div>
+                              <p class="mt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                   Lorem Ipsum
 
-                              <p>
-                                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                   Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                   unknown printer took a galley of type and scrambled Lorem Ipsum is simply dummy text
-                                   of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                                   standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                                   type and scrambled
-                              </p>
-
+                                   has been the industry's <br /> standard dummy text ever since the inter took a galley
+                                   of
+                                   type and scrambled </p>
+                              <!-- <h2 class="mt-4">
+                                   To bring inspiration and innovation to every <br />
+                                   <span>business in the world.</span>
+                              </h2> -->
                          </div>
-                         <div class="col-12 col-sm-12 col-md-3">
+
+                         <div class="row pt-5">
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <div class="tab_div">
+                                        <p>Backend</p>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <div class="tab_div light-tab">
+                                        <p>CMS</p>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <div class="tab_div light-tab">
+                                        <p>Mobile</p>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <div class="tab_div light-tab">
+                                        <p>Front End</p>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <div class="tab_div light-tab">
+                                        <p>Database</p>
+                                   </div>
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <div class="tab_div light-tab">
+                                        <p>Infra and DevOps</p>
+                                   </div>
+                              </div>
+                         </div>
+
+                         <div class="row justify-content-center py-5">
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <img src="./public/images/Group 1000002052.png" alt="" class="img-fluid">
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <img src="./public/images/Group 1000002050.png" class="img-fluid" alt="">
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <img src="./public/images/Group 1000002049.png" class="img-fluid" alt="">
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <img src="./public/images/Group 1000002047.png" class="img-fluid" alt="">
+                              </div>
+                              <div class="col-12 col-sm-12 col-md-2">
+                                   <img src="./public/images/Group 1000002046.png" class="img-fluid" alt="">
+                              </div>
+                         </div>
+                         <!-- <div class="col-12 col-sm-12 col-md-3">
 
                               <div class="col-12">
                                    <div class="row">
@@ -223,7 +418,6 @@
                                         </div>
                                    </div>
                               </div>
-                              <!-- <h4>Over 100+ Payment Gateways Support</h4> -->
 
                          </div>
                          <div class="col-12 col-sm-12 col-md-5">
@@ -249,7 +443,7 @@
                                         </div>
                                    </div>
                               </div>
-                         </div>
+                         </div> -->
                     </div>
                </div>
           </section>
@@ -294,6 +488,8 @@
                </div>
           </section>
           <!-- Help Us -->
+
+
 
           <!-- Let Us Bring Our Visions Together -->
           <section class="let_us_bring">
