--- a/learning/interview-question/index.html
+++ b/learning/interview-question/index.html
@@ -10,7 +10,10 @@
 
 <body>
 
-     <script src="../oop.js"></script>
+     <h1>hi</h1>
+
+     <!-- <script src="../oop.js"></script> -->
+     <script src="../app.js"></script>
 </body>
 
 </html>
