--- a/busNet/about.html
+++ b/busNet/about.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./public/stylesheet/footer.css" />
     <link rel="stylesheet" href="./public/stylesheet/about.css" />
     <link rel="stylesheet" href="./public/stylesheet/service.css" />
+    <link rel="stylesheet" href="./public/stylesheet/responsive.css" />
 </head>
 
 <body>
@@ -43,17 +44,17 @@
                             <a class="nav-link" href="./services.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">portfolio</a>
+                            <a class="nav-link" href="./portfolio.html">portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">career</a>
+                            <a class="nav-link" href="./career.html">career</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">contacts</a>
+                            <a class="nav-link" href="./contact.html">contacts</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <button class="get-button">Get In Touch</button>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -73,13 +74,11 @@
         <section class="Our_vision py-5">
             <div class="container-fluid side_padding">
 
-
-
                 <div class="row align-items-center">
-                    <div class="col-12 col-sm-12 col-md-6">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
                         <img src="./public/images/user-with-phone.png" class="img-fluid" alt="" />
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 mt-5 mt-xl-0 text-center text-xl-start">
                         <h5>Who we are</h5>
                         <h2 class="mt-4">
                             Work with a dedicated
@@ -99,8 +98,8 @@
                     </div>
                 </div>
 
-                <div class="row pt-5 mt-5">
-                    <div class="col-12 col-sm-12 col-md-5">
+                <div class="row pt-5 mt-2 mt-xl-5">
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-5 mb-5 mb-xl-0 text-center text-xl-start">
 
                         <h5>Our Vision</h5>
                         <h2 class="mt-4">
@@ -120,13 +119,14 @@
                                 business may face.</strong>
                         </p>
 
-                        <div class="d-flex align-items-center mt-4 play_button_div">
+                        <div
+                            class="d-flex align-items-center justify-content-center justify-content-xl-start mt-4 play_button_div">
                             <img src="./public/images/playbutton.png" alt="" />
                             <h4 class="mb-0 ms-3">VIDEO SHOWCASE</h4>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-2"></div>
-                    <div class="col-12 col-sm-12 col-md-5">
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-2"></div>
+                    <div class="col-12 col-sm-12 col-md-12 col-xl-5">
                         <img src="./public/images/new-users.png" class="img-fluid" alt="" />
                     </div>
                 </div>
@@ -196,8 +196,6 @@
             </div>
         </section> -->
         <!-- About Us -->
-
-
 
         <!-- Our Team -->
         <!-- <section class="our_team explore_our_work">
@@ -326,7 +324,7 @@
         <!-- Explore our work -->
 
         <!-- Our Software -->
-        <section class="our_software server Our_vision why_choose_us about-up py-5 my-5">
+        <section class="our_software server Our_vision why_choose_us about-up py-2 py-lg-5 my-0 my-lg-5">
             <div class="image">
                 <img src="./public/images/lp.png" alt="">
             </div>
@@ -349,7 +347,7 @@
                 </div>
 
                 <div class="row py-5">
-                    <div class="col-12 col-sm-12 col-md-4">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4 mt-4 mt-xl-0">
                         <div class="info_card">
                             <img src="./public/images/user.png" class="img-fluid w-100" alt="">
                             <div class="bottom_div d-flex align-items-center p-3">
@@ -359,7 +357,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-4">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4 mt-4 mt-xl-0">
                         <div class="info_card">
                             <img src="./public/images/use--1.png" class="img-fluid w-100" alt="">
                             <div class="bottom_div d-flex align-items-center p-3">
@@ -369,7 +367,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-4">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4 mt-4 mt-xl-0">
                         <div class="info_card">
                             <img src="./public/images/use-22.png" class="img-fluid w-100" alt="">
                             <div class="bottom_div d-flex align-items-center p-3">
@@ -379,7 +377,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-4 mt-4">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4 mt-4">
                         <div class="info_card">
                             <img src="./public/images/Rectangle 1423.png" class="img-fluid w-100" alt="">
                             <div class="bottom_div d-flex align-items-center p-3">
@@ -389,7 +387,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-4 mt-4">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4 mt-4">
                         <div class="info_card">
                             <img src="./public/images/Rectangle 1422.png" class="img-fluid w-100" alt="">
                             <div class="bottom_div d-flex align-items-center p-3">
@@ -399,7 +397,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-4 mt-4">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4 mt-4">
                         <div class="info_card">
                             <img src="./public/images/Rectangle 1421.png" class="img-fluid w-100" alt="">
                             <div class="bottom_div d-flex align-items-center p-3">
@@ -416,16 +414,18 @@
 
 
         <!-- all members -->
-        <section class="all_members explore_our_work py-5">
+        <section class="all_members explore_our_work pt-2 pb-2 py-lg-5">
             <div class="container-fluid p-0">
-                <div class="col-12 text-center">
-                    <h2>Our Team</h2>
-                    <div class="line_div sm-line-three"></div>
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h2>Our Team</h2>
+                        <div class="line_div sm-line-three"></div>
 
-                    <p class="mt-4">
-                        Our software development team has built up a workflow that has enabled us <br />
-                        to achieve excellent results with less effort.
-                    </p>
+                        <p class="mt-4">
+                            Our software development team has built up a workflow that has enabled us <br />
+                            to achieve excellent results with less effort.
+                        </p>
+                    </div>
                 </div>
                 <div class="row gx-0">
                     <div class="col-12">
