--- a/busNet/webApplication.html
+++ b/busNet/webApplication.html
@@ -62,7 +62,8 @@
           <div class="banner-section text-center">
                <div class="banner-content web-banner">
                     <h4>Services</h4>
-                    <h2>Web Application <br /> Development</h2>
+                    <div class="line_div sm-line-two banner-line"></div>
+                    <h2 class="mt-4">Web Application <br /> Development</h2>
 
                     <button class="read-more">READ MORE</button>
                </div>
@@ -75,41 +76,55 @@
           <!-- Technology Stack -->
           <section class="tec about-up py-2">
                <div class="container-fluid side_padding ">
-                    <div class="row technology_stack p-5">
+                    <div class="row technology_stack p-0 p-md-5">
                          <div class="col-12 text-center">
                               <h3><span>Web Development</span> Company! </h3>
                               <div class="line_div sm-line-two"></div>
                          </div>
 
-                         <div class="row pt-5">
-                              <div class="col-12 col-sm-12 col-md-2">
-                                   <div class="tab_div">
-                                        <p>Backend</p>
+                         <div class="col-12">
+                              <div class="row pt-5">
+                                   <div class="col-12 col-sm-12 col-md-6 col-lg-4 text-center">
+                                        <div class="tab_div tab-active">
+                                             <a href="./webApplication.html">
+                                                  <p>Web Application Development</p>
+                                             </a>
+                                        </div>
                                    </div>
-                              </div>
-                              <div class="col-12 col-sm-12 col-md-2">
-                                   <div class="tab_div light-tab">
-                                        <p>CMS</p>
+                                   <div class="col-12 col-sm-12 col-md-6 col-lg-4 text-center">
+                                        <div class="tab_div light-tab">
+                                             <a href="./blockchain.html">
+                                                  <p>Blockchain</p>
+                                             </a>
+                                        </div>
                                    </div>
-                              </div>
-                              <div class="col-12 col-sm-12 col-md-2">
-                                   <div class="tab_div light-tab">
-                                        <p>Mobile</p>
+                                   <div class="col-12 col-sm-12 col-md-6 col-lg-4 text-center">
+                                        <div class="tab_div light-tab">
+                                             <a href="./customer sof.html">
+                                                  <p>Customer Software Development</p>
+                                             </a>
+                                        </div>
                                    </div>
-                              </div>
-                              <div class="col-12 col-sm-12 col-md-2">
-                                   <div class="tab_div light-tab">
-                                        <p>Front End</p>
+                                   <div class="col-12 col-sm-12 col-md-6 col-lg-4 text-center">
+                                        <div class="tab_div light-tab">
+                                             <a href="./E-commerce.html">
+                                                  <p>E - Commerce</p>
+                                             </a>
+                                        </div>
                                    </div>
-                              </div>
-                              <div class="col-12 col-sm-12 col-md-2">
-                                   <div class="tab_div light-tab">
-                                        <p>Database</p>
+                                   <div class="col-12 col-sm-12 col-md-6 col-lg-4 text-center">
+                                        <div class="tab_div light-tab">
+                                             <a href="./cloudStrategy.html">
+                                                  <p>Cloud Straregy & Planing</p>
+                                             </a>
+                                        </div>
                                    </div>
-                              </div>
-                              <div class="col-12 col-sm-12 col-md-2">
-                                   <div class="tab_div light-tab">
-                                        <p>Infra and DevOps</p>
+                                   <div class="col-12 col-sm-12 col-md-6 col-lg-4 text-center">
+                                        <div class="tab_div light-tab">
+                                             <a href="./qunality-assurance.html">
+                                                  <p>Quality Assurance</p>
+                                             </a>
+                                        </div>
                                    </div>
                               </div>
                          </div>
@@ -125,8 +140,8 @@
                               <img src="./public/images/Group 1000002266.png" class="img-fluid" alt="" />
                          </div>
 
-                         <div class="col-12 col-sm-12 col-md-6">
-                              <h1 class="mb-5">About <span>our Team</span></h1>
+                         <div class="col-12 col-sm-12 col-md-6 mt-4 mt-md-0 text-center text-md-start">
+                              <h1 class="mb-5 mt-4 mt-md-0">About <span>our Team</span></h1>
                               <p>BonAmi is a top website design and web development company in India delivering the best
                                    web development services to craft bespoke websites, web applications, web-tools, etc.
                                    to global businesses and startups with 100% project delivery.</p>
@@ -143,6 +158,9 @@
           <!-- Enterprise Solutions -->
           <section class="enterprice_solutions our_software about-up pt-5 pb-5">
                <div class="container-fluid">
+                    <div class="img-div">
+                         <img src="./public/images/PSD_08 3.png" alt="">
+                    </div>
                     <div class="row justify-content-center">
                          <div class="col-10 text-center para-card p-5">
                               <h3><span>Enterprise</span> Solutions</h3>
@@ -210,6 +228,9 @@
 
           <section class="enterprice_solutions our_software about-up pt-5 pb-5">
                <div class="container-fluid">
+                    <div class="img-div reverse">
+                         <img src="./public/images/pas.png" alt="">
+                    </div>
                     <div class="row justify-content-center">
                          <div class="col-10 text-center para-card p-5">
                               <h3>Mobile<span> Backend & APIs</span></h3>
@@ -341,6 +362,9 @@
 
           <section class="enterprice_solutions our_software about-up pt-5 pb-5">
                <div class="container-fluid">
+                    <div class="img-div">
+                         <img src="./public/images/PSD_08 3.png" alt="">
+                    </div>
                     <div class="row justify-content-center">
                          <div class="col-10 text-center para-card p-5">
                               <h3>Our<span>Approach</span></h3>
