--- a/busNet/services.html
+++ b/busNet/services.html
@@ -16,6 +16,7 @@
      <link rel="stylesheet" href="./public/stylesheet/footer.css" />
      <link rel="stylesheet" href="./public/stylesheet/about.css" />
      <link rel="stylesheet" href="./public/stylesheet/service.css" />
+     <link rel="stylesheet" href="./public/stylesheet/responsive.css" />
 </head>
 
 <body>
@@ -43,25 +44,25 @@
                                    <a class="nav-link" href="./services.html">Services</a>
                               </li>
                               <li class="nav-item">
-                                   <a class="nav-link" href="#">portfolio</a>
+                                   <a class="nav-link" href="./portfolio.html">portfolio</a>
                               </li>
                               <li class="nav-item">
-                                   <a class="nav-link" href="#">career</a>
+                                   <a class="nav-link" href="./career.html">career</a>
                               </li>
                               <li class="nav-item">
-                                   <a class="nav-link" href="#">contacts</a>
+                                   <a class="nav-link" href="./contact.html">contacts</a>
                               </li>
-                              <li class="nav-item">
-                                   <button class="get-button">Get In Touch</button>
-                              </li>
+                              <!-- <li class="nav-item">
+                               <button class="get-button">Get In Touch</button>
+                           </li> -->
                          </ul>
                     </div>
                </div>
           </nav>
 
-
-          <div class="col-12 side_padding">
-               <div class="about_banner server_banner banner-section ">
+          <div class="col-12">
+               <div
+                    class="about_banner side_padding server_banner banner-section justify-content-center justify-content-xl-start text-center text-xl-start">
                     <div class="">
                          <!-- <h4>Your Trusted Friend for</h4> -->
                          <h2>Services</h2>
@@ -80,8 +81,6 @@
 
      <!-- main -->
      <main>
-
-
           <!-- Service We Provide -->
           <section class="service_section why_choose_us about-up py-5">
                <div class="phone-one">
@@ -101,7 +100,7 @@
                          </div>
 
                          <div class="row py-5">
-                              <div class="col-12 col-sm-12 col-md-3">
+                              <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mt-4 mt-xl-0">
                                    <div class="server_cards text-center py-5 px-4">
                                         <img src="./public/images/setting-icon.png" alt="">
                                         <h5 class="mt-4">Web development</h5>
@@ -114,7 +113,7 @@
                                         <button class="read_more mt-3">READ MORE</button>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-3">
+                              <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mt-4 mt-xl-0">
                                    <div class="server_cards text-center py-5 px-4">
                                         <img src="./public/images/Group 1000002059.png" alt="">
                                         <h5 class="mt-4">web designing</h5>
@@ -127,7 +126,7 @@
                                         <button class="read_more mt-3">READ MORE</button>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-3">
+                              <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mt-4 mt-xl-0">
                                    <div class="server_cards text-center py-5 px-4">
                                         <img src="./public/images/Group 1000002060.png" alt="">
                                         <h5 class="mt-4">mobile application development</h5>
@@ -140,7 +139,7 @@
                                         <button class="read_more mt-3">READ MORE</button>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-3">
+                              <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mt-4 mt-xl-0">
                                    <div class="server_cards text-center py-5 px-4">
                                         <img src="./public/images/Group 1000002061.png" alt="">
                                         <h5 class="mt-4">SEO</h5>
@@ -154,7 +153,7 @@
                                    </div>
                               </div>
 
-                              <div class="col-12 col-sm-12 col-md-3 mt-4">
+                              <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mt-4">
                                    <div class="server_cards text-center py-5 px-4">
                                         <img src="./public/images/Group 1000002062.png" alt="">
                                         <h5 class="mt-4">cloud management</h5>
@@ -167,7 +166,7 @@
                                         <button class="read_more mt-3">READ MORE</button>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-3 mt-4">
+                              <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mt-4">
                                    <div class="server_cards text-center py-5 px-4">
                                         <img src="./public/images/Group 1000002063.png" alt="">
                                         <h5 class="mt-4">cloud migration</h5>
@@ -180,7 +179,7 @@
                                         <button class="read_more mt-3">READ MORE</button>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-3 mt-4">
+                              <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mt-4">
                                    <div class="server_cards text-center py-5 px-4">
                                         <img src="./public/images/Group 1000002064.png" alt="">
                                         <h5 class="mt-4">Website maintenance/ open to challenges</h5>
@@ -193,7 +192,7 @@
                                         <button class="read_more mt-3">READ MORE</button>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-3 mt-4">
+                              <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3 mt-4">
                                    <div class="server_cards text-center py-5 px-4">
                                         <img src="./public/images/Group 1000002064 (1).png" alt="">
                                         <h5 class="mt-4">quality assurance (qA)</h5>
@@ -311,7 +310,7 @@
 
                                    has been the industry's <br /> standard dummy text ever since the inter took a galley
                                    of
-                                   type and scrambled </p>
+                                   type and scrambled</p>
                               <!-- <h2 class="mt-4">
                                    To bring inspiration and innovation to every <br />
                                    <span>business in the world.</span>
@@ -319,32 +318,32 @@
                          </div>
 
                          <div class="row pt-5">
-                              <div class="col-12 col-sm-12 col-md-2">
-                                   <div class="tab_div">
+                              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2">
+                                   <div class="tab_div light-tab">
                                         <p>Backend</p>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2">
                                    <div class="tab_div light-tab">
                                         <p>CMS</p>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2">
                                    <div class="tab_div light-tab">
                                         <p>Mobile</p>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2">
                                    <div class="tab_div light-tab">
                                         <p>Front End</p>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2">
                                    <div class="tab_div light-tab">
                                         <p>Database</p>
                                    </div>
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2">
                                    <div class="tab_div light-tab">
                                         <p>Infra and DevOps</p>
                                    </div>
@@ -352,19 +351,24 @@
                          </div>
 
                          <div class="row justify-content-center py-5">
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div
+                                   class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2 mt-3 mt-xl-0 text-center text-xl-start">
                                    <img src="./public/images/Group 1000002052.png" alt="" class="img-fluid">
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div
+                                   class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2 mt-3 mt-xl-0 text-center text-xl-start">
                                    <img src="./public/images/Group 1000002050.png" class="img-fluid" alt="">
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div
+                                   class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2 mt-3 mt-xl-0 text-center text-xl-start">
                                    <img src="./public/images/Group 1000002049.png" class="img-fluid" alt="">
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div
+                                   class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2 mt-3 mt-xl-0 text-center text-xl-start">
                                    <img src="./public/images/Group 1000002047.png" class="img-fluid" alt="">
                               </div>
-                              <div class="col-12 col-sm-12 col-md-2">
+                              <div
+                                   class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-2 mt-3 mt-xl-0 text-center text-xl-start">
                                    <img src="./public/images/Group 1000002046.png" class="img-fluid" alt="">
                               </div>
                          </div>
@@ -453,15 +457,16 @@
           <section class="help_us py-5">
                <div class="container">
                     <div class="row align-items-center">
-                         <div class="col-12 col-sm-12 col-md-6">
+                         <div class="col-12 col-sm-12 col-md-12 col-xl-6 text-center text-xl-start">
                               <h1>Help Us To Improve Our <span>Service Quality</span></h1>
                               <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nos trud
                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                   pariatur. Excepteur sint occaecat cupidatat non proident, </p>
+                                   pariatur. Excepteur sint occaecat cupidatat non proident,</p>
 
-                              <div class="d-flex align-items-center py-4">
+                              <div
+                                   class="d-flex align-items-center justify-content-center justify-content-xl-start py-4">
                                    <img src="./public/images/Group 1000002053.png" alt="">
                                    <div class="ms-4">
                                         <h5 class="mb-0">Michelle Yeoh</h5>
@@ -469,10 +474,10 @@
                                    </div>
                               </div>
                          </div>
-                         <div class="col-12 col-sm-12 col-md-2"></div>
-                         <div class="col-12 col-sm-12 col-md-4">
-                              <div class="testimonial_card">
-                                   <div>
+                         <div class="col-12 col-sm-12 col-md-12 col-xl-2 my-2 mt-xl-0"></div>
+                         <div class="col-12 col-sm-12 col-md-12 col-xl-4">
+                              <div class="testimonial_card p-5 justify-content-center justify-content-xl-start">
+                                   <div class="text-center text-xl-start">
                                         <img src="./public/images/Group 1000002054.png" alt="">
                                         <h5 class="text-white mt-4">Testimonial</h5>
                                         <h1 class="text-white">What Our
