--- a/learning/interview-question/index.html
+++ b/learning/interview-question/index.html
@@ -13,7 +13,8 @@
      <h1>hi</h1>
 
      <!-- <script src="../oop.js"></script> -->
-     <script src="../app.js"></script>
+     <!-- <script src="../app.js"></script> -->
+     <script src="../oop-learning.js"></script>
 </body>
 
 </html>
